# Ck3-Coa-Generator

./: .gitignore  Cargo.toml  LICENSE  README.md
coa_converter/: Cargo.toml
coa_converter/src/: main.rs
coa_converter_lib/: Cargo.toml
coa_converter_lib/src/: lib.rs
coa_converter_wasm/: Cargo.toml
coa_converter_wasm/src/: lib.rs
coa_web/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
coa_web/src/: index.html
coa_web/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
coa_web/src/app/Dialogs/message-box/: message-box.component.html  message-box.component.spec.ts  message-box.component.ts
