[package]
name = "coa_converter_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
coa_converter_lib = {path = "../coa_converter_lib"}
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = "0.1.7"


[dependencies.image]
version = "0.24.0"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]